# programming_cpp

./: README.md
lab0/: CMakeLists.txt
lab0/include/: FileHandler.h  ResultWriter.h  TextProcessor.h  WordCounter.h
lab0/src/: FileHandler.cpp  ResultWriter.cpp  TextProcessor.cpp  WordCounter.cpp  main.cpp
lab0/test/: input.txt  output.csv
lab_1/: main.cpp
